--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href="https://fonts.googleapis.com/css?family=Titan+One" rel="stylesheet">
   <link rel="stylesheet" href="css/styles.css">
-  <title>Ghost Smashers</title>
+  <title>Ghost Busters</title>
 </head>
 <body>
   <div id="wrap">
