--- a/index.html
+++ b/index.html
@@ -11,6 +11,17 @@
 <body>
   <div id="wrap">
     <canvas id="main-canvas" width="950" height="650"></canvas>
+    <div id="intro">
+      <h1>Carnival<br>Ghostbuster</h1>
+      <p>Hit the ghost. How long<br>can you stay in the game?</p>
+      <button id="start-game">Start Game</button>
+    </div>
+    <div id="end">
+      <h1>Game<br>Over</h1>
+      <p></p>
+      <p>Your level:</p>
+      <button id="play-again">Play Again</button>
+    </div>
   </div>
   <script src="js/script.js"></script>
 </body>
