Started refactoring and implementing the game experience.

--- a/index.html
+++ b/index.html
@@ -9,18 +9,20 @@
   <title>Ghost Busters</title>
 </head>
 <body>
-  <div id="wrap">
-    <canvas id="main-canvas" width="950" height="650"></canvas>
-    <div id="intro">
-      <h1>Carnival<br>Ghostbuster</h1>
-      <p>Hit the ghost. How long<br>can you stay in the game?</p>
-      <button id="start-game">Start Game</button>
-    </div>
-    <div id="end">
-      <h1>Game<br>Over</h1>
-      <p></p>
-      <p>Your level:</p>
-      <button id="play-again">Play Again</button>
+  <div id="wrapper">
+    <div class="center-content">
+      <canvas id="main-canvas" width="950" height="650"></canvas>
+      <div id="intro">
+        <h1>Carnival<br>Ghostbuster</h1>
+        <p>Hit the ghost. How long<br>can you stay in the game?</p>
+        <button id="start-game">Start Game</button>
+      </div>
+      <div id="end">
+        <h1>Game<br>Over</h1>
+        <p></p>
+        <p>Your level:</p>
+        <button id="play-again">Play Again</button>
+      </div>
     </div>
   </div>
   <script src="js/script.js"></script>
