--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <div id="wrapper">
     <div class="center-content">
-      <canvas id="main-canvas" width="950" height="650"></canvas>
+      <canvas id="main-canvas"></canvas>
       <div id="intro">
         <h1>Carnival<br>Ghostbuster</h1>
         <p>Hit the ghost. How long<br>can you stay in the game?</p>
@@ -19,7 +19,6 @@
       </div>
       <div id="end">
         <h1>Game<br>Over</h1>
-        <p></p>
         <p>Your level:</p>
         <button id="play-again">Play Again</button>
       </div>
